# lachter

./: .gitmodules  CMakeLists.txt  alphabeta.cc  alphabeta.hh  lachter.cc  lachter.hh  mcts.cc  mcts.hh  minimax.cc  minimax.hh  plan.txt  play_dwarf_mcts.cc  rollout2.cc  rollout2.hh  selfplay_alphabeta.cc  selfplay_mcts.cc  selfplay_rollout2.cc  test_alphabeta.cc  test_hotspot.cc  test_lachter.cc  test_mcts.cc  test_minimax.cc  test_randomgames.cc  test_rollout2.cc  test_thud1.cc  test_thudbit.cc  thud1.cc  thudbit.cc  thudbit.hh  thurisaz_bot.cc
